<!--
  ~ Copyright (c) 2016-2017 Connor Wyatt <connorwyatt1@gmail.com>.
  ~
  ~ This file can not be copied and/or distributed without the express permission of Connor Wyatt.
  -->

<resources>
    <string name="app_name" translatable="false">Flashcards</string>
    <string name="action_delete">Delete</string>
    <string name="action_navigate_to_tags">Tag manager</string>
    <string name="action_test">Test</string>
    <string name="action_undo">Undo</string>
    <string name="tags_title">Tags</string>
    <string name="tag_status_negative">You need to learn more about flashcards with this tag!</string>
    <string name="tag_status_neutral">Your knowledge on flashcards with this tag could do with some improvement!</string>
    <string name="tag_status_no_data">There is no data for this tag.</string>
    <string name="tag_status_positive">Your knowledge on flashcards with this tag seems very good!</string>
    <string name="deleted_tag_snackbar">Deleted tag \"%1$s\"</string>
    <string name="flashcard_cards_list_all_tag">All</string>
    <string name="flashcard_details_title">Title</string>
    <string name="flashcard_details_text">Text</string>
    <string name="flashcard_details_tags">Tags</string>
    <string name="flashcard_details_save">Save</string>
    <string name="save_toast">Saved successfully</string>
    <string name="delete_toast">Delete successful</string>
    <string name="flashcard_test_skip_toast">Skipped \"%1$s\"</string>
    <string name="flashcard_test_confirmation_title">Confirmation</string>
    <string name="flashcard_test_confirmation_message">Are you sure you want to exit the test mode?\n\nYour current progress will still be saved.</string>
    <string name="flashcard_test_confirmation_yes">Yes</string>
    <string name="flashcard_test_confirmation_no">No</string>
    <string name="flashcard_test_summary_title">Summary</string>
    <string name="flashcard_test_summary_breakdown_explanation">Below is the breakdown of the flashcards that you rated your confidence level on:</string>
    <string name="flashcard_test_summary_finish_button">Finish</string>
    <string name="percentage">%1$d%%</string>
    <string name="validation_required">This field is required</string>
    <string name="validation_max_length">Exceeded max length: %1$d/%2$d</string>
    <string name="validation_tags_max_length">Exceeded max length for individual tags: %1$d</string>
    <string name="validation_email">This is not a valid email</string>
    <string name="tag_details_name">Name</string>
    <string name="tag_details_save">Save</string>
    <string name="tag_name_taken">A tag with the name \"%1$s\" already exists</string>
    <string name="action_edit">Edit</string>
    <string name="delete_tag_dialog_title">Delete tag</string>
    <string name="delete_tag_dialog_message">Do you want to delete the flashcards with this tag as well?</string>
    <string name="delete_tag_dialog_yes">Yes</string>
    <string name="delete_tag_dialog_no">No</string>
    <string name="delete_tag_dialog_cancel">Cancel</string>
    <string name="activity_auth_email">Email Address</string>
    <string name="activity_auth_login">Login</string>
    <string name="activity_auth_register">Register</string>
    <string name="activity_auth_password">Password</string>
    <string name="activity_auth_title">Login / Register</string>
    <string name="activity_auth_register_email_taken_error">Email already has an account associated</string>
    <string name="activity_auth_login_user_not_found_error">No user account found for the email provided</string>
    <string name="activity_auth_login_invalid_credentials_error">Incorrect email or password entered</string>
    <string name="activity_auth_register_invalid_credentials_error">Invalid email or password entered</string>
    <string name="activity_auth_unknown_error">An error occurred</string>
    <string name="continue_to_test">Continue to Test!</string>
    <string name="cancel">Cancel</string>
    <string name="order_random">Random</string>
    <string name="order_worst_to_best">Worst to Best</string>
    <string name="order_label">Order</string>
    <string name="limit_cards">Limit Cards?</string>
    <string name="limit_label">Limit</string>
    <string name="test_options">Test Options</string>
</resources>
