<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016-2017 Connor Wyatt <connorwyatt1@gmail.com>.
  ~
  ~ This file can not be copied and/or distributed without the express permission of Connor Wyatt.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:theme="@style/AppTheme.CardView"
        app:cardBackgroundColor="@color/colorBackgroundDarker">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/flashcard_test_summary_title"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextInvert"
                    android:textSize="30sp" />
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/colorFadedEdge"
                android:fillViewport="true"
                android:requiresFadingEdge="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBackgroundDark"
                    android:fillViewport="true"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@string/flashcard_test_summary_breakdown_explanation"
                        android:textColor="@color/colorTextInvert" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/ic_positive_rating" />

                        <TextView
                            android:id="@+id/flashcard_test_summary_positive_percent"
                            android:layout_width="96dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:textAlignment="center"
                            android:textColor="@color/colorTextInvert"
                            android:textSize="18dp" />

                        <TextView
                            android:id="@+id/flashcard_test_summary_positive_count"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_weight="1"
                            android:textAlignment="center"
                            android:textColor="@color/colorTextInvert" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/ic_neutral_rating" />

                        <TextView
                            android:id="@+id/flashcard_test_summary_neutral_percent"
                            android:layout_width="96dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:textAlignment="center"
                            android:textColor="@color/colorTextInvert"
                            android:textSize="18dp" />

                        <TextView
                            android:id="@+id/flashcard_test_summary_neutral_count"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_weight="1"
                            android:textAlignment="center"
                            android:textColor="@color/colorTextInvert" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/ic_negative_rating" />

                        <TextView
                            android:id="@+id/flashcard_test_summary_negative_percent"
                            android:layout_width="96dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:textAlignment="center"
                            android:textColor="@color/colorTextInvert"
                            android:textSize="18dp" />

                        <TextView
                            android:id="@+id/flashcard_test_summary_negative_count"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_weight="1"
                            android:textAlignment="center"
                            android:textColor="@color/colorTextInvert" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/flashcard_test_summary_skip_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textColor="@color/colorTextInvert" />
                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp">

                <Button
                    android:id="@+id/flashcard_test_summary_finish_button"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flashcard_test_summary_finish_button"
                    android:textColor="@color/colorTextInvert" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
